--- a/Violência_Contra_Mulher_Manaus_CAmoedo.ipynb
+++ b/Violência_Contra_Mulher_Manaus_CAmoedo.ipynb
@@ -47,7 +47,9 @@
         "# Analisando a Violência Doméstica Contra Muleres em Manaus - Amazonas\n",
         " <left><img alt=\"Feminicídio Não\" width=\"40%\" src=\"https://assets-compromissoeatitude-ipg.sfo2.cdn.digitaloceanspaces.com/2013/10/feminicidiobasta600-250x300.jpg\"></left>\n",
         "\n",
-        "Neste notebook faremos uma análise exploratória sobre violência doméstica cometidas contra mulheres na capital do estado do Amazonas (Manaus) em 2020."
+        "Neste notebook faremos uma análise exploratória sobre violência doméstica cometidas contra mulheres na capital do estado do Amazonas (Manaus) em 2020.\n",
+        "\n",
+        "Feminicídio é o homicídio cometido contra mulheres que é motivado por violência doméstica ou discriminação de gênero. [Brasil Escola \"Blog\"](https://tinyurl.com/yymovk68)"
       ]
     },
     {
