--- a/Violência_Contra_Mulher_Manaus_CAmoedo.ipynb
+++ b/Violência_Contra_Mulher_Manaus_CAmoedo.ipynb
@@ -64,7 +64,7 @@
         "\n",
         "Os dados foram obtidos no [portal da SSP-AM](http://www.ssp.am.gov.br/ssp-dados/), através de arquivo PDF, depois convertido para .csv\n",
         "\n",
-        "Nesse *dataset* \"infelizmente\" constam mínimas informações disponibilizadas pelas Secretarias de Segurança de Estado no Amazonas, há muito a se fazer para que realmente os dados sejam publico e transperentes por aqui, em 15-08-2020, data que estou criando esta análise, só estão diponíveis inofrmações até Junho de 2020, diante disto, vamos ver o que conseguimos gerar de informação."
+        "Nesse *dataset* \"infelizmente\" constam mínimas informações disponibilizadas pelas Secretarias de Segurança de Estado no Amazonas, há muito a se fazer para que realmente os dados sejam público e transparentes por aqui, em 15-08-2020, data que estou criando esta análise, só estão disponíveis informações até Junho de 2020, diante disto, vamos ver o que conseguimos gerar de informação."
       ]
     },
     {
@@ -1234,7 +1234,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Verificamos acima que a média das variáveis **INJÚRIA E AMEAÇA** são de **533.17 E 505.5**, respectivamente por mês, ou seja, são numeros absurdos que tendem a evoluir para outro tipo de evento, como  agressão, vias de fato ou até mesmo FEMINICÍDIO por isso são importantes indicadores que devem ser melhor acompanhados."
+        "Verificamos acima que a média das variáveis **INJÚRIA E AMEAÇA** são de **533.17 E 505.5**, respectivamente por mês, ou seja, são números absurdos que tendem a evoluir para outro tipo de evento, como  agressão, vias de fato ou até mesmo FEMINICÍDIO por isso são importantes indicadores que devem ser melhor acompanhados."
       ]
     },
     {
@@ -1285,7 +1285,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Evoluindo com a análise, observamos acima, índices procupanetes de **LESÃO CORPORAL E VIAS DE FATOS por mês**, \"lembrem-se, um evento sempre é um indicador para outro\", vamos analisar duas variáveis de evento e criamos uma terceira variável chamada **TRUCULENCE** para somar as duas, vejam os resultados abaixo: \n",
+        "Evoluindo com a análise, observamos acima, índices preocupantes de **LESÃO CORPORAL E VIAS DE FATOS por mês**, \"lembrem-se, um evento sempre é um indicador para outro\", vamos analisar duas variáveis de evento e criamos uma terceira variável chamada **TRUCULENCE** para somar as duas, vejam os resultados abaixo: \n",
         "\n",
         "**LESÃO CORPORAL = 231.83**\n",
         "\n",
@@ -1329,7 +1329,7 @@
         "outputId": "4ceb12c5-4b1d-4d6d-b753-b2cc2a8a841f"
       },
       "source": [
-        "# Total de Feminicídios, Homicídios e incendio\n",
+        "# Total de Feminicídios, Homicídios e incêndio\n",
         "print(df.FEMINICIDIO.sum())\n",
         "print(df.HOMICIDIO.sum())\n",
         "print(df.INCENDIO.sum())\n",
@@ -1355,7 +1355,7 @@
         "colab_type": "text"
       },
       "source": [
-        "**Os numero mensais acima mostram:**\n",
+        "**Os número mensais acima mostram:**\n",
         "\n",
         "**`FEMINICIDIO`= 13**\n",
         "\n",
@@ -1441,7 +1441,7 @@
         "colab_type": "text"
       },
       "source": [
-        "A soma das médias desses tipos de eventos demonsta que há uma média de quase **QUATRO ASSASINATOS** de mulheres por mês em Manaus."
+        "A soma das médias desses tipos de eventos demonstra que há uma média de quase **QUATRO ASSASSINATOS** de mulheres por mês em Manaus."
       ]
     },
     {
@@ -1453,7 +1453,7 @@
       "source": [
         "## Visualização de Dados\n",
         "\n",
-        "Hostograma é um poderoso recursos de visualização de dados, abaixo faremos a plotagem do histograma para mostrar cada uma das variáveis:\n",
+        "Histograma é um poderoso recursos de visualização de dados, abaixo faremos a plotagem do histograma para mostrar cada uma das variáveis:\n",
         "* `INJÚRIA, AMEAÇAS, LESÃO CORPORAL, VIAS DE FATO E FEMINICÍDIO`.\n",
         "\n",
         "Vamos Plotar ainda um gráfico de linhas para variável \n",
@@ -1662,14 +1662,14 @@
       "source": [
         "## Conclusão\n",
         "\n",
-        "Além da aplicação de análise exploratório básica neste nootebook, fica registrada a importância \"lamentavelmente\" de demonstrar os numeros absurdos de violências cometidas contra a mulheres na capital do Estado do Amazona (Manaus).\n",
+        "Além da aplicação de análise exploratório básica neste nootebook, fica registrada a importância \"lamentavelmente\" de demonstrar os números absurdos de violências cometidas contra a mulheres na capital do Estado do Amazona (Manaus).\n",
         "\n",
-        "Abrindo um parêntese, Fiquei muito surpreso com os resultados encontrados e desta forma não tinha como aqui fazer apenas o papel de Cientista de Dados, esse era o objetivo principal, no entanto, diante dos núremos fiquei indgnado e aqui quero soliderizar com as mulheres e seus familiares que sofrem com a violência domestica.\n",
+        "Abrindo um parêntese, Fiquei muito surpreso com os resultados encontrados e desta forma não tinha como aqui fazer apenas o papel de Cientista de Dados, esse era o objetivo principal, no entanto, diante dos resultasdos fiquei indignado e aqui quero solidarizar com as mulheres e seus familiares que sofrem com a violência doméstica.\n",
         "\n",
-        "Por fim, este estudo revela muito mais que os próprios numeros nele demonstrados e deixa ainda algumas perguntas a serem respondias:\n",
+        "Por fim, este estudo revela muito mais que os próprios números nele demonstrados e deixa ainda algumas perguntas a serem respondias:\n",
         "\n",
         "* a) Quantos desses casos passará para o próximo evento?\n",
-        "* b) Que ações o Poder publico está tomando para reduzir as taxas de violência contra a mulheres?\n",
+        "* b) Que ações o Poder público está tomando para reduzir as taxas de violência contra a mulheres?\n",
         "* c) Quanto as transparências dos dados, será que há interesse em realmente divulgar?\n",
         "\n"
       ]
