--- a/Violência_Contra_Mulher_Manaus_CAmoedo.ipynb
+++ b/Violência_Contra_Mulher_Manaus_CAmoedo.ipynb
@@ -45,7 +45,8 @@
       },
       "source": [
         "# Analisando a Violência Doméstica Contra Muleres em Manaus - Amazonas\n",
-        " <left><img alt=\"Feminicídio Não\" width=\"40%\" src=\"https://assets-compromissoeatitude-ipg.sfo2.cdn.digitaloceanspaces.com/2013/10/feminicidiobasta600-250x300.jpg\"></left>\n",
+        " <left><img alt=\"Feminicídio Não\" width=\"40%\" src=\"https://github.com/charlesamoedo/Data-Science/blob/master/datasets/feminicidiobasta600-250x300.jpg?raw=1\"></left>\n",
+        "\n",
         "\n",
         "Neste notebook faremos uma análise exploratória sobre violência doméstica cometidas contra mulheres na capital do estado do Amazonas (Manaus) em 2020.\n",
         "\n",
@@ -104,7 +105,7 @@
         "#Exibir 5 primeiras linhas do DF\n",
         "df.head(5)"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -388,7 +389,7 @@
         "# Tamanho do DataFrame\n",
         "df.shape"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -419,7 +420,7 @@
         "# Nome das colunas \"Variáveis\"\n",
         "df.columns"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -457,7 +458,7 @@
         "#Tipos de dados presentes no DF \n",
         "df.dtypes"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -514,7 +515,7 @@
         "# Seis primeiras linhas do DF (Cabeçalho)\n",
         "df.head(6)"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -809,7 +810,7 @@
         "# ordenar em decrescente as variáveis por seus valores ausentes\n",
         "(df.isnull().sum() / df.shape[0]).sort_values(ascending=False)"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -886,7 +887,7 @@
         "#Resumo estatístico do dataFrame\n",
         "df.describe()"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1215,7 +1216,7 @@
         "print(round(MEDIA_INJ,2))\n",
         "print(round(MEDIA_AME,2))"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1262,7 +1263,7 @@
         "print(round((TRUCULENCE / 2)/30,2))\n",
         "\n"
       ],
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1335,7 +1336,7 @@
         "print(df.INCENDIO.sum())\n",
         "\n"
       ],
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1394,7 +1395,7 @@
         "#somando as duas variáveis\n",
         "print(df.INCENDIO.mean())"
       ],
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1423,7 +1424,7 @@
         "SOMA_MEDIAS_MORTES =df.FEMINICIDIO.mean()+ df.HOMICIDIO.mean()+df.INCENDIO.mean()\n",
         "print(SOMA_MEDIAS_MORTES)\n"
       ],
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1475,7 +1476,7 @@
         "# Histogramas da variável\n",
         "df.INJURUA.hist();"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1507,7 +1508,7 @@
         "# Histogramas da variável\n",
         "df.AMEACA.hist();"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1539,7 +1540,7 @@
         "# Histogramas da variável\n",
         "df.LESAO_CORPORAL.hist();"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1571,7 +1572,7 @@
         "# Histogramas da variável\n",
         "df.VIAS_DE_FATO.hist();"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1604,7 +1605,7 @@
         "# FEMINICÍCDIO\n",
         "df.FEMINICIDIO.hist();"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1636,7 +1637,7 @@
         "# Grafico de Linha para variável perturbação da tranquilidade \n",
         "df.PERTURBACAO_TRANQUILID.plot();"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
