--- a/Violência_Contra_Mulher_Manaus_CAmoedo.ipynb
+++ b/Violência_Contra_Mulher_Manaus_CAmoedo.ipynb
@@ -44,7 +44,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Analisando a Violência Doméstica Contra Muleres em Manaus - Amazonas\n",
+        "# Analisando a Violência Doméstica Contra Mulheres em Manaus - Amazonas\n",
         " <left><img alt=\"Feminicídio Não\" width=\"40%\" src=\"https://github.com/charlesamoedo/Data-Science/blob/master/datasets/feminicidiobasta600-250x300.jpg?raw=1\"></left>\n",
         "\n",
         "\n",
